6.kubernetes/k8s/deployment.yaml
# Kubernetes Deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simplestore-app
spec:
  selector:
    matchLabels:
      app: simplestore-app
  template:
    metadata:
      labels:
        app: simplestore-app
    spec:
      containers:
        - name: simplestore-app-container
          image: tochratana/simplestore:v1.0.8
          ports:
            - containerPort: 3000
