6.kubernetes/k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simplestore-app
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingressClassName: "nginx"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - simplestore.tochratana.com
      secretName: simplestore-secret-tls
  rules:
    - host: simplestore.tochratana.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simplestore-service
                port:
                  number: 3000
