6.kubernetes/k8s/simplestore-app.yaml
# Deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: simplestore-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simplestore-app
  template:
    metadata:
      labels:
        app: simplestore-app
    spec:
      containers:
        - name: simplestore
          image: tochratana/simplestore:v1.0.8
          imagePullPolicy: Always
          ports:
            - containerPort: 3000

---
# Service
apiVersion: v1
kind: Service
metadata:
  name: simplestore-service
spec:
  type: ClusterIP
  selector:
    app: simplestore-app
  ports:
    - port: 3000
      targetPort: 3000

---

# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simplestore-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - simplestore.tochratana.com
      secretName: simplestore-tls
  rules:
    - host: simplestore.tochratana.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simplestore-service
                port:
                  number: 3000
